2008-08-30 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Totem and totem-pl-parser branched for GNOME 2.24.

2008-08-30  Claude Paroz  <claude@2xlibre.net>

	* module.py: Do computation in render() instead of __init__() for
	ListModulesRequest, so as XmlModules are only loaded once.
	* releases.xml.in: Added 'master' branch to avahi.

2008-08-30  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: gok branched for 2.22, added avahi module in
	freedesktop.
	* people.xml.in: Added Lennart.
	* modules.py: Defines "Enter bug" and "i18n bugs" URLs depending on bug
	tracking type.
	* templates/module.tmpl: Use the URLs defined in modules.py.

2008-08-26 Gil Forcada <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module billreminder in Extras.

2008-08-22  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: Specify 'master' branch for xkeyboard-config (otherwise
	default to HEAD).

2008-08-22  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Removed gnopernicus (obsolete module).

2008-08-20  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in:
	* releases.xml.in: Added new module libmbca in Extras.

2008-08-15  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Added hamster-applet to desktop set.

2008-08-13  Gil Forcada  <gforcada@gnome.org>

	* gnome-modules.xml.in:
	* releases.xml.in:
	Metacity branched for GNOME 2.24.

2008-08-10  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: Fixed help path for bug-buddy. Patch by Leonardo
	Fontenelle. Fixes #547132.

2008-08-06  Claude Paroz  <claude@2xlibre.net>

	* releases.xml.in: seahorse-plugins added in 2.24 desktop.

2008-08-06  Claude Paroz  <claude@2xlibre.net>

	* gnome-modules.xml.in: gedit HEAD is not frozen. Added seahorse-plugins
	module.

2008-08-05  Claude Paroz  <claude@2xlibre.net>
