@@ -418,10 +418,6 @@
     <branch id="HEAD"/>
   </module>
 
-  <module id="evolution-caldav">
-    <branch id="HEAD"/>
-  </module>
-
   <module id="evolution-data-server">
     <branch id="HEAD"/>
     <branch id="gnome-2-14" stringfrozen="true"/>
