@@ -150,7 +150,6 @@
     <module id="epiphany-extensions"/>
     <module id="epiphany-mono"/>
     <module id="evolution-brainread"/>
-    <module id="evolution-caldav"/>
     <module id="evolution-jescs"/>
     <module id="evolution-scalix"/>
     <module id="evolution-xmltv"/>
